# eliteRobot_cpp_sdk

./: .gitignore  CMakeLists.txt  CS_UserManual_Robot_State_Message.txt  README.md  Robot40011Port.cpp  Robot40011Port.hpp  RobotException.cpp  RobotException.hpp  RobotInterface.cpp  RobotInterface.hpp  RobotState.cpp  RobotState.hpp  RobotStateLoadFile.cpp
CppSample/: CMakeLists.txt  Robot40011Port.hpp  Robot40011PortTest.cpp  movel_test.cpp  sample.cpp  socketConnect.cpp  test.cpp
HandEyeCalib/: CMakeLists.txt  calibExample.cpp  csvFile.csv  handEyeCalib.cpp  handEyeCalib.hpp  test.cpp
HandEyeCalib/calib2.26/: csvFile.csv  poses.txt
HandEyeCalib/calib4.7/: README.md  csvFile.csv  poses.txt
HandEyeCalib/images/: poses.txt
RTSI_cpp_sample/: CMakeLists.txt  DataRecipe.cpp  Rtsi.cpp  Rtsi.hpp  RtsiMain.cpp  RtsiMsg.hpp  RtsiReceiveDemo.cpp  readme.md  rtsiReceive.cpp  rtsiReceive.h
RTSI_cpp_sample/Logger/: Logger.cpp  Logger.hpp
RTSI_cpp_sample/doc/: APIReference.md
UserUseDemo/: CMakeLists.txt  main.cpp  readme.md
doc/: APIReference.md  CS_用户手册_机器人状态报文.xlsx  handEyeCalib.md
docs/: APIReference.md  RTSI_APIReference.md
examples/: CMakeLists.txt  RtsiMain.cpp  example_RtsiReceiveDemo.cpp  example_realTime_fkik.cpp  example_robot40011Port.cpp  example_robot_control.cpp  sample_robot_state.cpp
include/: Logger.hpp  Robot40011Port.hpp  RobotException.hpp  RobotInterface.hpp  RobotState.hpp  Rtsi.hpp  rtsiReceive.h
install/include/: RtsiMsg.hpp
install/lib/cmake/elite_robot_SDK/: elite_robot_SDKConfig-noconfig.cmake  elite_robot_SDKConfig.cmake
install/share/RobotState/config/: CS_UserManual_Robot_State_Message.txt
src/: DataRecipe.cpp  Logger.cpp  Robot40011Port.cpp  RobotException.cpp  RobotInterface.cpp  RobotState.cpp  RobotStateLoadFile.cpp  Rtsi.cpp  rtsiReceive.cpp
tools/HandEyeCalib/: CMakeLists.txt  calibExample.cpp  handEyeCalib.cpp  handEyeCalib.hpp
tools/HandEyeCalib/calib4.7/: README.md  poses.txt
tools/HandEyeCalib/docs/: handEyeCalib.md
